# gsql

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO.tasks  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  gsql.desktop.in  gsql.planner  gsql.schemas  gsql.spec
data/: Makefile.am  Makefile.in  gsql.lang
data/templates/: function.template  java.source.template  object.type.body.template  object.type.template  package.body.template  package.template  procedure.template
debian/: changelog  control  control-example-gsql  copyright  gsql-desktop  gsql-doc.doc-base  gsql-mysql-engine.install  gsql-mysql-engine.lintian-overrides  gsql-mysql.install  gsql-oracle-engine.install  gsql-oracle.install  gsql-plugins.install  gsql-plugins.lintian-overrides  gsql-postgresql-engine.install  gsql.install  gsql.menu  libgsql-dev.install  rules  (+1 more)
debian.orig/: README.Debian  changelog  copyright  gsql-dev.install  gsql-doc.install  gsql-doc.links  gsql-oracle.install  gsql-plugins.install  gsql.install  rules
engines/example/: Makefile.am  engine_example.c  gsql-engine-example.schemas
engines/example/pixmaps/: Makefile.am
engines/firebird/: Makefile.am  engine.c  engine_conf.c  engine_conf.h  engine_confcb.c  engine_confcb.h  engine_firebird.ui  engine_menu.c  engine_menu.h  engine_menucb.c  engine_menucb.h  engine_session.c  engine_session.h  engine_stock.c  engine_stock.h  firebird.c  firebird_cursor.c  firebird_cursor.h  firebird_var.c  firebird_var.h  nav_objects.c  nav_objects.h  nav_sql.h  nav_tree__arguments.c  nav_tree__arguments.h  nav_tree__columns.c  nav_tree__columns.h  nav_tree__constraints.c  nav_tree__constraints.h  nav_tree__exceptions.c  nav_tree__exceptions.h  nav_tree__functions.c  nav_tree__functions.h  nav_tree__generators.c  nav_tree__generators.h  nav_tree__indexes.c  nav_tree__indexes.h  nav_tree__procedures.c  nav_tree__procedures.h  nav_tree__schemas.c  (+9 more)
engines/firebird/pixmaps/: Makefile.am
engines/mysql/: Makefile.am  Makefile.in  engine_conf.c  engine_conf.h  engine_confcb.c  engine_confcb.h  engine_menu.c  engine_menu.h  engine_menucb.c  engine_menucb.h  engine_mysql.c  engine_mysql.ui  engine_session.c  engine_session.h  engine_stock.c  engine_stock.h  gsql-engine-mysql.schemas  mysql.c  mysql.h  mysql_cursor.c  mysql_cursor.h  mysql_var.c  mysql_var.h  nav_objects.c  nav_objects.h  nav_sql.h  nav_tree__columns.c  nav_tree__constraints.c  nav_tree__indexes.c  nav_tree__indexes.h  nav_tree__privileges.c  nav_tree__procedures.c  nav_tree__procedures.h  nav_tree__processlist.c  nav_tree__processlist.h  nav_tree__schemas.c  nav_tree__schemas.h  nav_tree__tables.c  nav_tree__tables.h  nav_tree__triggers.c  (+6 more)
engines/mysql/pixmaps/: Makefile.am  Makefile.in
engines/oracle/: Makefile.am  Makefile.in  engine_conf.c  engine_conf.h  engine_confcb.c  engine_confcb.h  engine_menu.c  engine_menu.h  engine_menucb.c  engine_menucb.h  engine_oracle.c  engine_oracle.ui  engine_session.c  engine_session.h  engine_stock.c  engine_stock.h  gsql-engine-oracle.schemas  nav_objects.c  nav_objects.h  nav_sql.h  nav_tree__arguments.c  nav_tree__arguments.h  nav_tree__clusters.c  nav_tree__clusters.h  nav_tree__columns.c  nav_tree__columns.h  nav_tree__constraints.c  nav_tree__constraints.h  nav_tree__dblinks.c  nav_tree__dblinks.h  nav_tree__depend.c  nav_tree__depend.h  nav_tree__dimens.c  nav_tree__dimens.h  nav_tree__indexes.c  nav_tree__indexes.h  nav_tree__indextypes.c  nav_tree__indextypes.h  nav_tree__java.c  nav_tree__java.h  (+53 more)
engines/oracle/pixmaps/: Makefile.am  Makefile.in
engines/postgresql/: Makefile.am  Makefile.in  engine.c  engine_conf.c  engine_conf.h  engine_confcb.c  engine_confcb.h  engine_menu.c  engine_menu.h  engine_menucb.c  engine_menucb.h  engine_pgsql.ui  engine_session.c  engine_session.h  engine_stock.c  engine_stock.h  nav_objects.c  nav_objects.h  nav_sql.h  nav_tree_columns.c  nav_tree_columns.h  nav_tree_constraints.c  nav_tree_constraints.h  nav_tree_databases.c  nav_tree_databases.h  nav_tree_indexes.c  nav_tree_indexes.h  nav_tree_languages.c  nav_tree_languages.h  nav_tree_privileges.c  nav_tree_privileges.h  nav_tree_procedures.c  nav_tree_procedures.h  nav_tree_processlist.c  nav_tree_processlist.h  nav_tree_schemas.c  nav_tree_schemas.h  nav_tree_sequences.c  nav_tree_sequences.h  nav_tree_tables.c  (+17 more)
engines/postgresql/pixmaps/: Makefile.am  Makefile.in
libgsql/: Makefile.am  Makefile.in  common.c  common.h  conf.c  conf.h  content.c  content.h  cursor.c  cursor.h  cvariable.c  cvariable.h  editor.c  editor.h  engines.c  engines.h  gsql-appui.c  gsql-appui.h  gsql-iface.c  gsql-iface.h  keyring.c  keyring.h  libgsql.h  libgsql.pc.in  menu.c  menu.h  navigation.c  navigation.h  navtree.c  navtree.h  notify.c  notify.h  plugins.c  plugins.h  session.c  session.h  sqleditor.c  sqleditor.h  stock.c  stock.h  (+8 more)
pixmaps/: Makefile.am  Makefile.in
plugins/: Makefile.am  Makefile.in  gsql-plugins.schemas
plugins/exporter/: Makefile.am  Makefile.in  export_csv.c  export_html.c  export_plain.c  export_xml.c  exporter_dialog.glade  exportercb.c  exportercb.h  plugin_exporter.c  plugin_exporter.h
plugins/runner/: Makefile.am  Makefile.in  plugin_runner.c  plugin_runner.h  plugin_runner.loT  runner_dialog.glade  thread_run.c  thread_run.h
plugins/tunnel/: Makefile.am  plugin_tunnel.c  plugin_tunnel.h  tunnel_conf.c  tunnel_conf.h  tunnel_config.xml
plugins/vte/: Makefile.am  Makefile.in  plugin_vte.c  plugin_vte.h  vte.ui  vte_conf.c  vte_conf.h  vte_dialog_conf.glade  vtecb.c  vtecb.h
src/: Makefile.am  Makefile.in  color-hinter.c  color-hinter.h  content-manager.h  gsql-actions.h  gsql-app.c  gsql-app.h  gsql-callbacks.c  gsql-callbacks.h  gsql-sessions.ui  gsql-statusbar.c  gsql-statusbar.h  gsql.c  gsql.h  gsql.ui  gsql_dialogs.glade  gsqlcb.c  gsqlcb.h  gsqlconf.c  gsqlconf.h  gsqlconfcb.c  gsqlconfcb.h  gsqlfiles.c  gsqlfiles.h  gsqlfiles.ui  gsqlhelp.c  gsqlhelp.h  gsqlhelp.ui  gsqlmenu.c  gsqlmenu.h  gsqlmenucb.c  gsqlmenucb.h  gsqltool.ui  main.c  session-manager.c  session-manager.h
(+66 files in other folders)
