## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gsql_datadir = $(PACKAGE_TEMPLATE_DIR)

gsql_data_DATA = \
	templates/package.template\
	templates/function.template\
	templates/java.source.template\
	templates/object.type.body.template\
	templates/object.type.template\
	templates/package.body.template\
	templates/procedure.template

EXTRA_DIST = $(gsql_data_DATA)
