## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

example_engine_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@/example

example_engine_pixmaps_DATA = \
	logo.png


EXTRA_DIST = $(example_engine_pixmaps_DATA)
