
firebird_engine_pixmaps_DATA = \
	firebird.png          \
	exception.png
	
	

##firebird_engine_pixmapsdir = \
##	$(pkgdatadir)

firebird_engine_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@/firebird

EXTRA_DIST = \
	$(firebird_engine_pixmaps_DATA)

## File created by the gnome-build tools

