## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

mysql_engine_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@/mysql

mysql_engine_pixmaps_DATA = \
	mysql.png          \
	close.png


EXTRA_DIST = $(mysql_engine_pixmaps_DATA)
