## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

oracle_engine_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@/oracle

oracle_engine_pixmaps_DATA = \
	oracle.png \
	clusters.png \
	collection.types.png \
	consumer.groups.png \
	current.instans.png \
	database.links.png \
	debug.png \
	dimensions.png \
	enabled.roles.png \
	free.space.png \
	granted.roles.png \
	index.types.png \
	instance.properties.modifiable.png \
	instance.properties.png \
	java.classes.png \
	java.resources.png \
	java.source.png \
	libraries.png \
	object.privileges.png \
	object.type.bodies.png \
	object.types.png \
	operators.png \
	oracle.png \
	package.bodies.png \
	packages.png \
	profiles.png \
	queues.png \
	recycle.bin.png \
	redo.log.groups.png \
	resource.limits.png \
	resource.plans.png \
	resources.png \
	roles.png \
	rollback.segments.png \
	server.options.png \
	server.output.png \
	session.privileges.png \
	snapshots.png \
	store.tables.png \
	synonyms.png \
	system.privileges.png \
	tablespace.quotas.png \
	tablespaces.png \
	snapshot.logs.png \
	dependent.objects.png \
	depends.on.png \
	package.entries.png \
	data.files.png \
	disk.groups.png \
	redo.log.members.png \
	object.privileges.png



EXTRA_DIST = $(oracle_engine_pixmaps_DATA)
