## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

pgsql_engine_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@/postgresql

pgsql_engine_pixmaps_DATA = \
	pgsql.png \
	process.list.png


EXTRA_DIST = $(pgsql_engine_pixmaps_DATA)
